*
* 2.1-M3
*

- Improved the usability of the Server Configuration, by adding descriptions and recognition for data types and possible values
-Fixed issues: NX-630, NX-916, NX-1151


*
* 2.1-M2
*

- Added alarm category functionality to manage which alarms are seen by what users
	- EPP rules can be configured to generate categorised alarms
	- Alarm categories can be created and configured in Alarm Category Configurator
	- By default view_all_alarms acl added to Everyone group
- Server can be configured to periodically send alarm summary emails
- Added template graphs
- New NXSL functions: mktime, GetSyslogRuleCheckCount, GetSyslogRuleMatchCount
- New NXSL "Node" class attributes: isInMaintenanceMode, lastAgentCommTime
- New NXSL "Table" class attribute "rows"
- Access to object's alarms in NXSL via "alarms" attribute in "NetObj" class
- Operator "new" in NXSL which can be used to instantiate objects if object class supports it
- Template auto-apply and container auto-bind works for clusters
- H3C driver correctly reads IPv6 addresses on interfaces
- Improved HP ProCurve driver
- SMS driver for Nexmo service
- SMS driver for SMSEagle gateway
- SMS driver for MyMobile service
- Fixed FDB handling on Cisco switches
- Added support for CHAP, MS-CHAPv1, and MS-CHAPv2 in RADIUS authentication
- MySQL monitoring subagent
- Fixed FreeBSD 11 compatibility issues
- Implemented interrupt and context switch counters in platform subagents
- Implemented CPU interrupt time parameters on Windows
- JMX subagent
- Event sending by agent do not restricted to master servers only anymore
- Launcher for nxshell
- Log monitoring subagent supports pre-allocated log files
- Management console:
	- File manager improvements
	- Option to save graph as image
	- Added multipliers support in data format string for gauges