@@ -3,7 +3,9 @@
 *
 
 - Improved the usability of the Server Configuration, by adding descriptions and recognition for data types and possible values
--Fixed issues: NX-630, NX-916, NX-1151
+- Alternative core configuration section can be set for nxagentd using -G command line option
+- Implicit external subagent registartion using EXT:* sections in agent configuration file
+- Fixed issues: NX-630, NX-916, NX-1151
 
 
 *
